--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,4 +1,11 @@
-0. 카테고리 검색 추가
-1. 데이터베이스 or json 연동 및 요청으로 데이터 받도록.(보안)
-2. 로고 수정
-3. 데이터베이스 검증
+0. 데이터베이스 or json 연동 및 요청으로 데이터 받도록.(보안)
+1. not found 화면
+2. Card에 아이콘 추가(가능?주의?불가능?)
+3. 카테고리 검색 추가
+4. 로고 수정
+5. 데이터베이스 검증
+6. 되는 음식만 보기 / 안되는 음식만 보기 필터
+
+
+
+
